--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^20.0.0",
     "@ionic/angular": "^8.0.0",
     "ionicons": "^7.0.0",
+    "ng2-pdf-viewer": "^10.4.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
